@@ -27,13 +27,18 @@ sub select {
 
 =method dsel
 
-Returns the values selected by the path as opposed to the nodes containing
-them.
+"De-references" the values selected by the path, extracting them from the
+L<TPath::Forester::Ref::Node> objects that hold them.
+
+In an array context C<dsel> returns all selections. Otherwise, it returns
+the first node selected.
 
 =cut
 
 sub dsel {
     my ( $self, $node ) = @_;
+    my @selection = $self->select($node);
+    return $selection[0] unless wantarray;
     map { $_->value } $self->select($node);
 }
 
